# GPU_KV_Storage

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  auto_batch_data.txt  cuda_notes.txt  hash.cu  hash.h  test_batch.zsh  test_batch_size.zsh  test_block_size.zsh  test_entries.zsh  test_key.zsh  test_threads.zsh  test_word.zsh
data/: auto_batch_data.txt  auto_batch_data_mt.txt  batch.csv  batch_data.txt  batch_mt.csv  key_data.txt  key_data_mt.txt  plot.py  word_data.txt
data/csv_files/: batch_mt.csv  block_size.csv  block_size_mt.csv  key.csv  key_mt.csv  load.csv  load_mt.csv  thread.csv  word.csv  word_mt.csv
data/text_output/: block_size_data.txt  entries_data.txt  entries_data_mt.txt  thread_data.txt  word_data_mt.txt
src/: auto_test.cu  hash.cu  hash.h  utils.cu  utils.h
